plugins {
    id 'java-library'
    id 'com.diffplug.spotless'
}

repositories {
    mavenCentral()
    maven { url uri("https://maven.fabricmc.net") }
    maven { url "https://maven.neoforged.net/releases" }
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'com.google.auto:auto-common:1.2.1'
    // Platform classes
//    "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
    implementation project(":annotations")
}

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
    options.release = 17
}

spotless {
    java {
        removeUnusedImports()
    }
}
version = '1.1.4'
